--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-<html>
 <head>
     <meta charset="utf-8" />
     <title></title>
@@ -8,6 +7,6 @@
 
 </body>
 <body>
-    Üdvözlet!
+    <p>Üdvözlet!</p>
+    <p>A hajo.html eléréséhez kattints <a href="hajo.html"ˇ>ide</a>!</p>
 </body>
-</html>
