hetedik heti feladat

--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    
 </head>
 <body>
+    <script src="/hetedik.js"></script>
     <div id="külső">
         <div id="kérdés_szöveg">
             Kérdés szövege
@@ -26,7 +28,7 @@
         <div class="gomb kattintható"> Előre</div>
     </div>
 
-    </body>
+</body>
 </html>
 
     <style>
