--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    
+    <script src="/hetedik.js"></script>
 </head>
 <body>
-    <script src="/hetedik.js"></script>
     <div id="külső">
         <div id="kérdés_szöveg">
             Kérdés szövege
