--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -16,16 +16,16 @@
     <div id="középső">
         <div id="válaszok">
             <div id="válasz1" class="kerdes kattintható"> Válasz 1</div>
-            <div id="válasz2" class="kerdes kattintható jó"> Válasz 2</div>
-            <div id="válasz3" class="kerdes kattintható rossz"> Válasz 3</div>
+            <div id="válasz2" class="kerdes kattintható"> Válasz 2</div>
+            <div id="válasz3" class="kerdes kattintható"> Válasz 3</div>
         </div>
         <div id="kép">
             <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
         </div>
     </div>
     <div id="vezérlő">
-        <div class="gomb kattintható"> Vissza</div>
-        <div class="gomb kattintható"> Előre</div>
+        <div id="vissza_gomb"> Vissza</div>
+        <div id="előre_gomb"> Előre</div>
     </div>
 
 </body>
@@ -73,7 +73,12 @@
             flex-shrink: 0;
         }
 
-        .gomb {
+        .vissza {
+            padding: 20px;
+            width: 80px;
+        }
+
+        .előre {
             padding: 20px;
             width: 80px;
         }
