tizenkettedik heti feladat 2.0

--- a/HajosTeszt/HajosTeszt/wwwroot/jokes.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/jokes.html
@@ -42,7 +42,7 @@
                     for (var i = 0; i < lista.length; i++) {
                         let újElem = document.createElement("div");
                         újElem.innerText = lista[i];
-                        document.getElementById("jokeTex").appendChild(újElem);
+                        document.getElementById("jokeText").appendChild(újElem);
                     }
                 }
         });
